k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-deployment-service
spec:
  selector:
    app: nodejs-deployment
  ports:
  - port: 3000
    targetPort: 3000
